darkmode pallete update

--- a/src/styles/veneu.scss
+++ b/src/styles/veneu.scss
@@ -18,12 +18,11 @@
   --veneu-light-lowlight: #ffffff66;
   --veneu-light-firefox-glass: #dfdfdff8;
 
-  --veneu-dark: #2c3e50;
-  --veneu-dark-backdrop: #2c3e50bb;
-  --veneu-dark-highlight: #253544;
-  --veneu-dark-lowlight: #33475c;
-  --veneu-dark-blue: #234462;
-  --veneu-dark-firefox-glass: #2c3e50f8;
+  --veneu-dark: #2b2b2f;
+  --veneu-dark-backdrop: #2b2b2fbb;
+  --veneu-dark-highlight: #252528;
+  --veneu-dark-lowlight: #313136;
+  --veneu-dark-firefox-glass: #2b2b2ff8;
 
   --calendar-border-current: var(--veneu-red) 2px solid !important;
 
