--- a/src/styles/quasar.scss
+++ b/src/styles/quasar.scss
@@ -112,7 +112,7 @@ body,
 .q-menu,
 #me .q-avatar,
 .q-date,
-.q-tab,
+.q-tab--inactive,
 .q-timeline__entry {
   animation: grow-in-button 0.5s forwards !important;
 }
