--- a/src/styles/veneu.scss
+++ b/src/styles/veneu.scss
@@ -14,14 +14,14 @@
 
   --veneu-light: #dfdfdf;
   --veneu-light-backdrop: #dfdfdfbb;
-  --veneu-light-highlight: #bebebe;
-  --veneu-light-lowlight: #ffffff66;
+  --veneu-light-highlight: #0000002a;
+  --veneu-light-lowlight: #ffffff50;
   --veneu-light-firefox-glass: #dfdfdff8;
 
   --veneu-dark: #2b2b2f;
   --veneu-dark-backdrop: #2b2b2fbb;
-  --veneu-dark-highlight: #252528;
-  --veneu-dark-lowlight: #313136;
+  --veneu-dark-highlight: #0000002a;
+  --veneu-dark-lowlight: #ffffff09;
   --veneu-dark-firefox-glass: #2b2b2ff8;
 
   --calendar-border-current: var(--veneu-red) 2px solid !important;
